--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Roboto", serif;
 }
 
 body {
@@ -98,6 +99,7 @@ body {
   color: var(--white);
   text-decoration: none;
   font-weight: 1000;
+  font-size: 1.5rem;
   transition: color 0.3s ease;
 }
 
@@ -118,7 +120,7 @@ body {
   margin: 0 auto;
   padding: 0 20px;
   font-weight: 900;
-  font-size: x-large;
+  font-size: 2rem;
   font-weight: bolder;
 }
 
@@ -151,6 +153,10 @@ body {
   font-size: 2.5rem;
   color: var(--primary-color);
   margin-bottom: 0.5rem;
+}
+
+.stat-item p {
+  font-size: 1.5rem;
 }
 
 /***************** Classes Section *****************/
